[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/UI_theme.tres" type="Theme" id=1]
[ext_resource path="res://UI/CardRecord.gd" type="Script" id=2]

[node name="CardRecord" type="MarginContainer"]
margin_right = 1040.0
margin_bottom = 40.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_right = 1040.0
margin_bottom = 40.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 1036.0
margin_bottom = 36.0

[node name="AttributeLabels" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
margin_right = 1032.0
margin_bottom = 32.0
alignment = 1

[node name="id" type="Label" parent="PanelContainer/MarginContainer/AttributeLabels"]
margin_left = 14.0
margin_top = 6.0
margin_right = 129.0
margin_bottom = 26.0
rect_min_size = Vector2( 115, 0 )
text = "1"
align = 1
valign = 1

[node name="VSeparator" type="VSeparator" parent="PanelContainer/MarginContainer/AttributeLabels"]
margin_left = 133.0
margin_right = 137.0
margin_bottom = 32.0

[node name="name" type="Label" parent="PanelContainer/MarginContainer/AttributeLabels"]
margin_left = 141.0
margin_top = 6.0
margin_right = 256.0
margin_bottom = 26.0
rect_min_size = Vector2( 115, 0 )
rect_clip_content = true
size_flags_horizontal = 5
valign = 1
clip_text = true
percent_visible = 1.11111
max_lines_visible = 1

[node name="VSeparator2" type="VSeparator" parent="PanelContainer/MarginContainer/AttributeLabels"]
margin_left = 260.0
margin_right = 264.0
margin_bottom = 32.0

[node name="card_class" type="Label" parent="PanelContainer/MarginContainer/AttributeLabels"]
margin_left = 268.0
margin_top = 6.0
margin_right = 383.0
margin_bottom = 26.0
rect_min_size = Vector2( 115, 0 )
text = "class"
align = 1
valign = 1

[node name="VSeparator3" type="VSeparator" parent="PanelContainer/MarginContainer/AttributeLabels"]
margin_left = 387.0
margin_right = 391.0
margin_bottom = 32.0

[node name="art_id" type="Label" parent="PanelContainer/MarginContainer/AttributeLabels"]
margin_left = 395.0
margin_top = 6.0
margin_right = 510.0
margin_bottom = 26.0
rect_min_size = Vector2( 115, 0 )
text = "1"
align = 1
valign = 1

[node name="VSeparator4" type="VSeparator" parent="PanelContainer/MarginContainer/AttributeLabels"]
margin_left = 514.0
margin_right = 518.0
margin_bottom = 32.0

[node name="description" type="Label" parent="PanelContainer/MarginContainer/AttributeLabels"]
margin_left = 522.0
margin_top = 6.0
margin_right = 637.0
margin_bottom = 26.0
rect_min_size = Vector2( 115, 0 )
text = "description"
align = 1
valign = 1
clip_text = true
max_lines_visible = 1

[node name="VSeparator5" type="VSeparator" parent="PanelContainer/MarginContainer/AttributeLabels"]
margin_left = 641.0
margin_right = 645.0
margin_bottom = 32.0

[node name="offensive_stat" type="Label" parent="PanelContainer/MarginContainer/AttributeLabels"]
margin_left = 649.0
margin_top = 6.0
margin_right = 764.0
margin_bottom = 26.0
rect_min_size = Vector2( 115, 0 )
text = "1"
align = 1
valign = 1

[node name="VSeparator6" type="VSeparator" parent="PanelContainer/MarginContainer/AttributeLabels"]
margin_left = 768.0
margin_right = 772.0
margin_bottom = 32.0

[node name="defensive_stat" type="Label" parent="PanelContainer/MarginContainer/AttributeLabels"]
margin_left = 776.0
margin_top = 6.0
margin_right = 891.0
margin_bottom = 26.0
rect_min_size = Vector2( 115, 0 )
text = "1"
align = 1
valign = 1

[node name="VSeparator7" type="VSeparator" parent="PanelContainer/MarginContainer/AttributeLabels"]
margin_left = 895.0
margin_right = 899.0
margin_bottom = 32.0

[node name="cost" type="Label" parent="PanelContainer/MarginContainer/AttributeLabels"]
margin_left = 903.0
margin_top = 6.0
margin_right = 1018.0
margin_bottom = 26.0
rect_min_size = Vector2( 115, 0 )
text = "1"
align = 1
valign = 1
